# rover_recorder

./: .gitignore  CMakeLists.txt  color_profiles.csv  depth_profiles.csv  ir_left_profiles.csv  ir_right_profiles.csv  settings.json
include/: data_recorder.hpp  gpio_manager.hpp  stream_manager.hpp
src/: data_recorder.cpp  gpio_manager.cpp  gpiotest.cpp  main.cpp  main_continuous.cpp  os_wdt_toggle.cpp  stream_manager.cpp
